[package]
name = "watchpower-api"
version = "0.0.5"
authors = ["David Freire"]
edition = "2021"
description = "WatchPower RestAPI Client for Rust"
repository = "https://github.com/davidsmfreire/watchpower-api-rs"
license = "MIT"

[lib]
name = "watchpower_api"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
